module(
    name = "navx",
    compatibility_level = 2023,
    version = "2023.0.1",
)

bazel_dep(name = "platforms", version = "0.0.4")
bazel_dep(name = "rules_java", version = "5.1.0")
bazel_dep(name = "rules_jvm_external", version = "4.4.2")
bazel_dep(name = "bzlmodrio-gentool", version = "0.0.3")
bazel_dep(name = "rules_bazelrio", version = "0.0.7")
bazel_dep(name = "rules_roborio_toolchain", version = "2023-7.6")
bazel_dep(name = "allwpilib", version = "2023.1.1")
bazel_dep(name = "wpi-opencv", version = "4.6.0-4")
bazel_dep(name = "bzlmodrio-ni", version = "2023.3.0")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

maven.install(
    artifacts = [
        "com.kauailabs.navx.frc:navx-frc-java:2023.0.1",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
        "https://frcmaven.wpi.edu/release",
        "https://dev.studica.com/maven/release/2023",
    ],
)

use_repo(
    maven,
    "maven",
)

setup_navx_cpp_dependencies = use_extension("//:maven_cpp_deps.bzl", "setup_navx_cpp_dependencies")

use_repo(
    setup_navx_cpp_dependencies,
    "bazelrio_com_kauailabs_navx_frc_navx-frc-cpp_headers",
    "bazelrio_com_kauailabs_navx_frc_navx-frc-cpp_linuxathena",
    "bazelrio_com_kauailabs_navx_frc_navx-frc-cpp_linuxathenastatic",
    "bazelrio_com_kauailabs_navx_frc_navx-frc-cpp_windowsx86-64",
    "bazelrio_com_kauailabs_navx_frc_navx-frc-cpp_windowsx86-64static",
)
