py_binary(
    name = "generate_navx",
    srcs = ["generate_navx.py"],
    deps = [
        "@bzlmodrio-allwpilib//generate_allwpilib:get_allwpilib_dependencies",
        "@bzlmodrio-gentool//bazelrio_gentool",
    ],
)

py_binary(
    name = "publish_navx",
    srcs = ["publish_navx.py"],
    deps = [
        "@bzlmodrio-allwpilib//generate_allwpilib:get_allwpilib_dependencies",
        "@bzlmodrio-gentool//bazelrio_gentool",
    ],
)
