cc_library(
    name = "navx-frc-cpp",
    linkstatic = 1,
    visibility = ["@navx//:__subpackages__"],
    deps = [
    ] + ["@bazelrio_com_kauailabs_navx_frc_navx-frc-cpp_headers//:headers"] + select({
        "@rules_roborio_toolchain//constraints/is_roborio:roborio": ["@bazelrio_com_kauailabs_navx_frc_navx-frc-cpp_linuxathena//:shared_libs"],
        "@bazel_tools//src/conditions:windows": ["@bazelrio_com_kauailabs_navx_frc_navx-frc-cpp_windowsx86-64//:shared_libs"],
    }),
)
