alias(
    name = "navx-frc-cpp",
    actual = ":shared",
    visibility = ["@navx//:__subpackages__"],
)

cc_library(
    name = "shared",
    linkstatic = 1,
    visibility = ["@navx//:__subpackages__"],
    deps = [
    ] + [
        "@navx//private/cpp/navx-frc-cpp:shared",
    ],
)

cc_library(
    name = "static",
    linkstatic = 1,
    visibility = ["@navx//:__subpackages__"],
    deps = [
    ] + [
        "@navx//private/cpp/navx-frc-cpp:static",
    ],
)
