cc_library(
    name = "navx",
    srcs = ["@bazelrio_com_kauailabs_navx_frc_navx-frc-cpp_sources//:sources"],
    linkstatic = 1,
    visibility = ["//visibility:public"],
    deps = [
        "@allwpilib//libraries/cpp/wpilibc",
        "@bazelrio_com_kauailabs_navx_frc_navx-frc-cpp_headers//:headers",
    ],
)
