cc_binary(
    name = "main",
    srcs = ["main.cpp"],
    # deps = ["@com_github_google_glog//:glog"],
    deps = ["@bzlmodrio-navx//libraries/cpp/navx"],
)

cc_test(
    name = "test",
    srcs = ["test.cpp"],
    deps = [
        "@googletest//:gtest_main",
        "@bzlmodrio-navx//libraries/cpp/navx",
    ],
)
